fix: change POST `/calc` to `/calc/save`
